# task12

./: readme.md
uniorb/: CMakeLists.txt  readme.md
uniorb/data/: readme.txt
uniorb/include/: date.hpp  event.hpp  event_type.hpp  exporter.hpp  importer.hpp  metrica.hpp  propagator.hpp  propagator_data.hpp  satellite.hpp  satellite_parameters.hpp  session.hpp  settings.hpp  station.hpp  strategy.hpp  strategy_1.hpp  strategy_2.hpp  strategy_3.hpp  strategy_4.hpp  uniorb.hpp
uniorb/output/strategy_1/: satellite_stats.txt
uniorb/output/strategy_1/Camera/: Camera_KinoSat_110101.txt  Camera_KinoSat_110102.txt  Camera_KinoSat_110103.txt  Camera_KinoSat_110104.txt  Camera_KinoSat_110105.txt  Camera_KinoSat_110106.txt  Camera_KinoSat_110107.txt  Camera_KinoSat_110108.txt  Camera_KinoSat_110109.txt  Camera_KinoSat_110110.txt  Camera_KinoSat_110201.txt  Camera_KinoSat_110202.txt  Camera_KinoSat_110203.txt  Camera_KinoSat_110204.txt  Camera_KinoSat_110205.txt  Camera_KinoSat_110206.txt  Camera_KinoSat_110207.txt  Camera_KinoSat_110208.txt  Camera_KinoSat_110209.txt  Camera_KinoSat_110210.txt  (+180 more)
uniorb/output/strategy_2/: satellite_stats.txt
uniorb/output/strategy_3/: satellite_stats.txt
uniorb/output/strategy_4/: satellite_stats.txt
uniorb/script/: script.txt
uniorb/source/: date.cpp  event.cpp  event_type.cpp  exporter.cpp  importer.cpp  metrica.cpp  propagator.cpp  propagator_data.cpp  satellite.cpp  satellite_parameters.cpp  session.cpp  station.cpp  strategy.cpp  strategy_1.cpp  strategy_2.cpp  strategy_3.cpp  strategy_4.cpp
uniorb/test/: main.cpp
(+1499 files in other folders)
